# X-Terminal

./: .gitignore  README.md  pyproject.toml  shell.py
commands/: cat.py  clear.py  echo.py  exec.py  ls.py  mkdir.py  ping.py  pwd.py  quit.py  rename.py  rm.py  rmdir.py  search.py  sysinfo.py  touch.py
