[project]
name = "py-shell"
version = "0.0.1"
description = " A simple shell (command prompt) made in python featuring a command handler."
authors = [
    { name = "EMPTY", email = "testerthe60@gmail.com" }
]
dependencies = ["colorama~=0.4.6"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
